# rust-for-java-developers

./: Cargo.toml  README.adoc
devoxx-data/: friday.json  monday.json  talks.txt  thursday.json  tuesday.json  wednesday.json
src/: main.rs
src/devoxx/: mod.rs  model.rs
src/ui/: app.rs  mod.rs  screen.rs
src/ui/util/: event.rs
